--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>
       Don't leave anything for later.<br />
       Later, the food gets cold.<br />
-      Later, you lose intrest.<br />
+      Later, you lose interest.<br />
       Later, the day turns into night.<br />
       Later, people grow old.<br />
       Later, life goes by.<br />
